--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,13 @@ body {
     background:url(../images/header.jpg) 28px 0px no-repeat, url(../images/topLeft.jpg) no-repeat, url(../images/leftSide.jpg) repeat-y, url(../images/topRight.jpg) repeat-x;
     width: 100%;
     margin: auto;
+    line-height: 1.2em;
 }
 
 img {
     max-width: 100%;
 }
+
 
 .pinkLabel {
     height: 33px;
@@ -26,12 +28,22 @@ img {
 }
 
 .grayLabel {
-    background-color: #3f3f3f;
+    background-color: #666;
     color: #fff;
     text-transform: uppercase;
     font-size: 1.2em;
     font-weight: 500;
     padding: 7px 0 5px 15px;
+}
+
+a {
+    color: #666;
+    text-decoration: none;
+    font-size: 110%;
+}
+
+a:hover {
+    color: #f96a95;
 }
  
  
@@ -43,11 +55,12 @@ img {
  
  /* ABOUT SPECIFIC ======================================== */
 #about {
-    max-width: 26%;
-    line-height: 1.2em;
+    max-width: 23%;
     margin: 40px 0px 0px 76px;
     float: left;
+    font-size: .9em;
 }
+
 
 /* FOOTER ======================================== */
 footer {
@@ -63,7 +76,14 @@ footer {
 section#right { 
     width: 60%;
     float: left;
-    margin: 0px 0px 0px 30px;
+    margin: 40px 0px 0px 5%;
+}
+
+article {
+    background: #eee;
+    padding: 15px;
+    margin: 0 0 15px 0;
+    
 }
 
 button {
@@ -73,11 +93,16 @@ button {
     color: #fff;
     text-transform: uppercase;
     font-size: 1em;
+    border: #fff 1px solid;
+    border-radius: 3px;
 }
 
 button:hover {
     background-color: #666666;
     color: #f96a95;
+    border: #f96a95 1px solid;
 }
- 
-/* COMPONENTS SPECIFIC ======================================== */ 
+
+.component {
+    width: 100%;
+}
