--- a/css/reset.css
+++ b/css/reset.css
@@ -3,7 +3,7 @@
 CSS RESET
 ================================================================================ */
 html, body, div, main, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+h1, h2, h3, h4, h5, h6, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -22,7 +22,6 @@ time, mark, audio, video,
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
 	vertical-align: baseline;
 	text-decoration: none;
 	
