--- a/components/10/component.html
+++ b/components/10/component.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
 </head>
 <body>
 
 	<!-- Component -->
-
+    <section>
+        <h1>Progress Control</h1>
+        <img src="" alt="Loader">
+        <ul>
+            <li><button>Increment</button></li>
+            <li><button>Set to 1%</button></li>
+            <li><button>Set to 50%</button></li>
+            <li><button>Finish</button></li>
+        </ul>
+    </section>
 	
 
 	<!-- End Component -->
