--- a/components/2/component.html
+++ b/components/2/component.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
 </head>
 <body>
 
 	<!-- Component -->
-
+    <section>
+        <ul>
+            <li><a href="#">Find Your Ride</a></li>
+            <li><a href="#">Become powered by iRide</a></li>
+            <li><a href="#">Manage your employees</a></li>
+        </ul>
+    </section>
 	
 
 	<!-- End Component -->
