--- a/components/4/component.html
+++ b/components/4/component.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
 </head>
 <body>
 
 	<!-- Component -->
-
+    <aside>
+        <h2>Contact</h2>
+        <p>Yoda soon you will call me master Fovernor Tarkin. A new hope Boba Fett bantha forest moon. Tusken raider Master Yoda do or do not never tell me the odds.</p>
+        <button><img src="" alt=""></button>
+        
+        <form>
+            <label for="name">Name<input type="text" name="name" /></label>
+            <label for="email">Email<input type="email" name="email" /></label>
+            <label for="subject">Subject<input type="text" name="subject" /></label>
+            <textarea name="message"></textarea>
+            <input type="submit" value="Envoyer">
+        </form>
+    </aside>
 	
 
 	<!-- End Component -->
