--- a/components/7/component.html
+++ b/components/7/component.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
 </head>
 <body>
 
 	<!-- Component -->
+    <header>
+        <img src="" alt="Dribble Logo">
+        <h1>Sign in</h1>
+    </header>
+    <section>
+        <article>
+            <p><label for="usernameEmail">Username or Email</label></p>
+            <input type="text" name="usernameEmail">
+            <p><label for="password">Password</label></p>
+            <input type="password" name="password">
+            
+            <p><input type="submit" value="Sign In"></p>
+        </article>
+        
+        <article>
+            <p><a href="#">Sign in with Twitter</a></p>
+            <p>One-click sign in to Dribbble if your account is connected to Twitter. We'll walk you through connecting it if it isn't.</p>
+        </article>
+    </section>
+        
+        <p>Not a member? <a href="#">Sign up now</a></p>
+    
 
 	
 
