--- a/components/1/component.html
+++ b/components/1/component.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
 </head>
 <body>
 
 	<!-- Component -->
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Solo Stories</a></li>
+            <li><a href="#">Price Plans</a></li>
+            <li><a href="#">Blog</a></li>
 
-	
+            <li><a href="">Take a Trial</a></li>
+            <li><a href="">Login</a></li>
+        </ul>
+    </nav>
+    <header>
+        <img src="" alt="Solo Logo">
+        <h1>Freelancing's tough, luckily you've just found your wingman.</h1>
 
+        <p><a href="#">Take a Trial</a></p>
+        <ul>
+            <li><a href="#">Dribbble</a></li>
+            <li><a href="#">Pinterest</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Facebook</a></li>
+        </ul>
+    </header>
+    
+    
 	<!-- End Component -->
 	
 </body>
