--- a/components/5/component.html
+++ b/components/5/component.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
 </head>
 <body>
 
 	<!-- Component -->
+    <section>    
+        <nav>
+            <li><a href="#">Twiter</a></li>
+            <li><a href="#">Sound Cloud</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Flickr</a></li>
+            <li><a href="#">Tumblr</a></li>
+            <li><a href="#">YouTube</a></li>
 
-	
+            <li><button>Responsive</button></li>
+            <li><button>Grid</button></li>
+            <li><button>List</button></li>
+        </nav>
+
+
+            <img src="" alt=""><!-- for the dot on the timeline-->
+            <article>
+                <img src="" alt="">
+                <h2>@Pauladeleone</h2>
+                <img src="" alt="">
+                <div></div>
+                    <p>RT @MustifiedTweets: Stunning Fashion Websites for your Inspiration http:/t.com/VW64TAatU6 #design, #love, #webdesign, #inspiration,</p>
+
+                    <ul>
+                        <li><button>Reply</button></li>
+                        <li><button>Retweet</button></li>
+                        <li><button>Favorite</button></li>
+                    </ul>
+                </div>
+                <img src="" alt="">
+                <p>about a minute ago</p>
+
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                </ul>
+            </article>
+        </section>
 
 	<!-- End Component -->
 	
