--- a/components/6/component.html
+++ b/components/6/component.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
 </head>
 <body>
 
 	<!-- Component -->
+    <section>
+        <p>354 shares</p>
+        <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><button><img src="" alt="More"></button></li>
+        </ul>
+    </section>
 
-	
 
 	<!-- End Component -->
 	
