--- a/components/8/component.html
+++ b/components/8/component.html
@@ -1,15 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
 </head>
 <body>
 
 	<!-- Component -->
-
-	
+    <footer>
+        <nav>
+            <h4>Information</h4>
+            <ul>
+                <li><a href="#">Contact Vendor</a></li>
+                <li><a href="#">Vendor Details</a></li>
+                <li><a href="#">Vendor TOS</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <h4>My Account</h4>
+            <ul>
+                <li><a href="#">My orders</a></li>
+                <li><a href="#">My Cart</a></li>
+            </ul>
+         </nav>
+        <nav>
+            <h4>Navigation</h4>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+         </nav>
+        <aside>
+            <h2>Newsletter</h2>
+            <input type="email" name="email" placeholder="Enter your email" />
+            <input type="submit" name="submit" value="Subscribe" />
+            
+            <h4>Follow Us</h4>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Google+</a></li>
+                <li><a href="#">YouTube</a></li>
+            </ul>
+        </aside>
+	</footer>
+    
+    <footer>
+        <p>Copyright &copy; 2015 MMA Store. All Rights Reserved. Template Settings</p>
+    </footer>
 
 	<!-- End Component -->
 	
