--- a/components/9/component.html
+++ b/components/9/component.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP Component: Firstname Lastname</title>
+	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
 </head>
 <body>
 
 	<!-- Component -->
-
+    <section>
+        <p>Subscribe to our newsletter to receive news, updates, and another stuff by email.:</p>
+        <p><input type="email" name="name" placeholder="Enter your email..." /></p>
+        <p><input type="submit" name="submit" value="Subscribe" /></p>
+    </section>
 	
 
 	<!-- End Component -->
