HTML Wk2 Changes

--- a/components/4/component.html
+++ b/components/4/component.html
@@ -8,19 +8,19 @@
 <body>
 
 	<!-- Component -->
-    <aside>
+    <section>
         <h2>Contact</h2>
         <p>Yoda soon you will call me master Fovernor Tarkin. A new hope Boba Fett bantha forest moon. Tusken raider Master Yoda do or do not never tell me the odds.</p>
         <button><img src="" alt=""></button>
         
         <form>
-            <label for="name">Name<input type="text" name="name" /></label>
-            <label for="email">Email<input type="email" name="email" /></label>
-            <label for="subject">Subject<input type="text" name="subject" /></label>
-            <textarea name="message"></textarea>
-            <input type="submit" value="Envoyer">
+            <p><label for="name">Name<input type="text" name="name" /></label></p>
+            <p><label for="email">Email<input type="email" name="email" /></label></p>
+            <p><label for="subject">Subject<input type="text" name="subject" /></label></p>
+            <p><textarea name="message"></textarea></p>
+            <p><input type="submit" value="Envoyer"></p>
         </form>
-    </aside>
+    </section>
 	
 
 	<!-- End Component -->
