--- a/components/5/component.html
+++ b/components/5/component.html
@@ -8,7 +8,7 @@
 <body>
 
 	<!-- Component -->
-    <section>    
+    <header>
         <nav>
             <li><a href="#">Twiter</a></li>
             <li><a href="#">Sound Cloud</a></li>
@@ -17,35 +17,69 @@
             <li><a href="#">Tumblr</a></li>
             <li><a href="#">YouTube</a></li>
 
-            <li><button>Responsive</button></li>
+            <li><button>Timeline</button></li>
             <li><button>Grid</button></li>
             <li><button>List</button></li>
         </nav>
-
-
+    </header>
+    <section>    
+        <article>
             <img src="" alt=""><!-- for the dot on the timeline-->
-            <article>
-                <img src="" alt="">
-                <h2>@Pauladeleone</h2>
-                <img src="" alt="">
-                <div></div>
-                    <p>RT @MustifiedTweets: Stunning Fashion Websites for your Inspiration http:/t.com/VW64TAatU6 #design, #love, #webdesign, #inspiration,</p>
 
-                    <ul>
-                        <li><button>Reply</button></li>
-                        <li><button>Retweet</button></li>
-                        <li><button>Favorite</button></li>
-                    </ul>
-                </div>
-                <img src="" alt="">
+            <header>
+                <img src="" alt=""><!-- platform icon -->
+                <h2>@Pauladeleone</h2>
+                <img src="" alt=""><!-- attachment icon -->
+            </header>
+
+
+            <p>RT @MustifiedTweets: Stunning Fashion Websites for your Inspiration http:/t.com/VW64TAatU6 #design, #love, #webdesign, #inspiration,</p>
+
+            <ul>
+                <li><button>Reply</button></li>
+                <li><button>Retweet</button></li>
+                <li><button>Favorite</button></li>
+            </ul>
+            <footer>
+                <img src="" alt=""><!-- clock icon -->
                 <p>about a minute ago</p>
 
                 <ul>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Twitter</a></li>
                 </ul>
-            </article>
+            </footer>
+        </article>
+        
+        <article>
+            <img src="" alt=""><!-- for the dot on the timeline-->
+
+            <header>
+                <img src="" alt=""><!-- attachment icon -->
+                <h2>@Projectpeachuk</h2>
+                <img src="" alt=""><!-- platform icon -->
+            </header>
+
+
+            <p>We're NOT a #webdesign studio. We are changing the way #websites work by making them work! Want to talk? #DevOps #smallbizutd #IT</p>
+
+            <ul>
+                <li><button>Reply</button></li>
+                <li><button>Retweet</button></li>
+                <li><button>Favorite</button></li>
+            </ul>
+            <footer>
+                <img src="" alt=""><!-- clock icon -->
+                <p>about a minute ago</p>
+
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                </ul>
+             </footer>
+           </article>
         </section>
+  
 
 	<!-- End Component -->
 	
