--- a/components/6/component.html
+++ b/components/6/component.html
@@ -9,12 +9,28 @@
 
 	<!-- Component -->
     <section>
-        <p>354 shares</p>
-        <ul>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><button><img src="" alt="More"></button></li>
-        </ul>
+        <article>
+            <h2>How to enable or disable safe mode in HTC one M8: Easy Way</h2>
+            <img src="" alt="" />
+            <p>354 shares</p>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><button><img src="" alt="More"></button></li>
+            </ul>
+            <p>HTC One M8 is a premiere smartphone from HTC that delivers the best performance and class apart features as compared to most of the latest Android Smartphone's available out there in the market.</p>
+        </article>
+        <article>
+            <h2>How to enable or disable safe mode in HTC one M8: Easy Way</h2>
+            <img src="" alt="" />
+            <p>354 shares</p>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><button><img src="" alt="More"></button></li>
+            </ul>
+            <p>HTC One M8 is a premiere smartphone from HTC that delivers the best performance and class apart features as compared to most of the latest Android Smartphone's available out there in the market.</p>
+        </article>
     </section>
 
 
