--- a/components/7/component.html
+++ b/components/7/component.html
@@ -14,12 +14,14 @@
     </header>
     <section>
         <article>
-            <p><label for="usernameEmail">Username or Email</label></p>
-            <input type="text" name="usernameEmail">
-            <p><label for="password">Password</label></p>
-            <input type="password" name="password">
-            
-            <p><input type="submit" value="Sign In"></p>
+            <form>
+                <p><label for="usernameEmail">Username or Email</label></p>
+                <p><input type="text" name="usernameEmail"></p>
+                <p><label for="password">Password</label> <a href="">Forgot?</a></p>
+                <p><input type="password" name="password"></p>
+
+                <p><input type="submit" value="Sign In"></p>
+            </form>
         </article>
         
         <article>
