--- a/components/8/component.html
+++ b/components/8/component.html
@@ -35,8 +35,10 @@
          </nav>
         <aside>
             <h2>Newsletter</h2>
-            <input type="email" name="email" placeholder="Enter your email" />
-            <input type="submit" name="submit" value="Subscribe" />
+            <form>
+                <p><input type="email" name="email" placeholder="Enter your email" /></p>
+                <p><input type="submit" name="submit" value="Subscribe" /></p>
+            </form>
             
             <h4>Follow Us</h4>
             <ul>
