--- a/components/9/component.html
+++ b/components/9/component.html
@@ -10,8 +10,10 @@
 	<!-- Component -->
     <section>
         <p>Subscribe to our newsletter to receive news, updates, and another stuff by email.:</p>
-        <p><input type="email" name="name" placeholder="Enter your email..." /></p>
-        <p><input type="submit" name="submit" value="Subscribe" /></p>
+        <form>
+            <p><input type="email" name="name" placeholder="Enter your email..." /></p>
+            <p><input type="submit" name="submit" value="Subscribe" /></p>
+        </form>
     </section>
 	
 
