Updated photos of components

--- a/components/1/component.css
+++ b/components/1/component.css
@@ -2,7 +2,11 @@
 ================================================================================
 COMPONENT STYLESHEET
 ================================================================================ */
+body {
+}
 
-/* HEADER ======================================== */
+nav {
+    
+}
 
 /* HEADER ======================================== */
