--- a/components/1/component.html
+++ b/components/1/component.html
@@ -4,33 +4,40 @@
 	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 	<!-- Component -->
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Solo Stories</a></li>
+            <li id="current"><a href="#">Home</a></li>
             <li><a href="#">Price Plans</a></li>
             <li><a href="#">Blog</a></li>
-
-            <li><a href="">Take a Trial</a></li>
             <li><a href="">Login</a></li>
+            <li><a href="">Take a Trial</a></li>
+            
         </ul>
     </nav>
     <header>
-        <img src="" alt="Solo Logo">
-        <h1>Freelancing's tough, luckily you've just found your wingman.</h1>
-
-        <p><a href="#">Take a Trial</a></p>
-        <ul>
-            <li><a href="#">Dribbble</a></li>
-            <li><a href="#">Pinterest</a></li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
-        </ul>
+        <article>
+            <img src="images/soloLogo.svg" alt="Solo Logo">
+            <h1>Freelancing's tough. Luckily you've just found your wingman.</h1>
+            <p>Scroll Down</p>
+            
+        </article>
+        
+        <article>
+            <p><a href="#">Take a Free Trial</a></p>
+            <ul>
+                <li><a href="http://www.dribbble.com">Dribbble</a></li>
+                <li><a href="http://www.pinterest.com">Pinterest</a></li>
+                <li><a href="http://www.linkedin.com">LinkedIn</a></li>
+                <li><a href="http://www.twitter.com">Twitter</a></li>
+                <li><a href="http://www.facebook.com">Facebook</a></li>
+            </ul>
+        </article>
     </header>
     
     
