--- a/components/2/component.html
+++ b/components/2/component.html
@@ -4,15 +4,16 @@
 	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 	<!-- Component -->
     <section>
         <ul>
-            <li><a href="#">Find Your Ride</a></li>
-            <li><a href="#">Become powered by iRide</a></li>
-            <li><a href="#">Manage your employees</a></li>
+            <li><a href="#find">Find Your Ride</a></li>
+            <li><a href="#powered">Become powered by iRide</a></li>
+            <li><a href="#manage">Manage your employees</a></li>
         </ul>
     </section>
 	
