--- a/components/2/component.css
+++ b/components/2/component.css
@@ -2,7 +2,63 @@
 ================================================================================
 COMPONENT STYLESHEET
 ================================================================================ */
+html { font-size: 62.5%; }
+body { 
+    background: url(images/traffic.jpg) no-repeat;
+    background-size: cover;
+    max-width: 960px;
+    margin: 0 auto;
+}
 
-/* HEADER ======================================== */
+a { 
+    color: #fff;
+}
 
-/* HEADER ======================================== */
+/* SECTION ======================================== */
+section {
+    font-family: 'Droid Serif', serif;
+    font-size: 1.2rem;
+    line-height: 2rem;
+    margin: 10rem auto;
+}
+
+section::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+li {
+    text-align: center;
+    float: left;
+    width: 100px;
+    margin-right: 10rem;
+}
+    
+li a {
+    padding-top: 12rem;
+    display: inline-block;
+}
+
+li a:last-child {
+    margin-right: 0;
+}
+
+li:hover {
+    border-radius: 50%;
+    background: rgba(31, 56, 186, .4);
+    box-shadow: inset 0 0 0 5px rgba(31, 56, 186, .8);
+}
+
+a[href*="find"] {
+    background: url(images/driver.png) no-repeat center;
+}
+
+a[href*="powered"] {
+    background: url(images/gear.png) no-repeat center;
+}
+
+a[href*="manage"] {
+    background: url(images/people.png) no-repeat center;
+}
+    
