--- a/components/3/component.html
+++ b/components/3/component.html
@@ -4,24 +4,30 @@
 	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 	<!-- Component -->    
-    <section>
+    <section id="posts">
         <ul>
-            <li><a href="#">Everything</a></li>
-            <li><a href="#">Interviews</a></li>
-            <li><a href="#">Books</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Jobs</a></li>
+            <li><h3><a href="#">Everything</a></h3></li>
+            <li><h3><a href="#">Interviews</a></h3></li>
+            <li id="current"><h3><a href="#">Books</a></h3></li>
+            <li><h3><a href="#">Events</a></h3></li>
+            <li><h3><a href="#">Jobs</a></h3></li>
         </ul>
         
+        <h1>Books</h1>
+        
         <article>
-            <figure><img src="" alt=""></figure>
+            <figure><img src="images/alphabetImage.png" alt="Alphabet Logo Image"></figure>
             <div>
-                <h2>Gordon Burniston</h2>
-                <p>FFF's favourite Glaswegian photography <a href="#">Gordon Burniston</a> launched an updated portfolio site with an abundance of excellent new work.</p>
+                <h2><a href="#">Alphabet Logo</a></h2>
+                <p>Our pals at Counterprint have done it again. Their latest book <a href="#">Alphabet Logo</a> is a compendium of logos designed, you guessed it, from letters of the alphabet. Containing over 500 logos from some of the world, this latest release showcases the work of leading design companies like; Bond Creative, Bruce Mau Design, Hype Type Studio, Pentagram, Stockholm Design Lab, Wolff Olins and even a couple of FFF contributors!</p>
+
+<p>Make sure you add a copy to your bookshelf.</p>
                 <ul>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Twitter</a></li>
@@ -37,9 +43,9 @@
         </article>
         
         <article>
-            <figure><img src="" alt=""></figure>
+            <figure><img src="images/spin.png" alt="Spin"></figure>
             <div>
-                <h2>Folch Studio</h2>
+                <h2><a href="">Folch Studio</a></h2>
                 <p>Barcelona agency <a href="#">Folch</a> were last featured on FFF back in 2010. Now ten years since opening the agency has developed a beautiful, diverse portfolio built on their solid editorial credentials</p>
                 <ul>
                     <li><a href="#">Facebook</a></li>
@@ -54,6 +60,10 @@
                 <p><a href="#">Comment Now</a></p>
             </div>
         </article>
+        
+    </section>
+    
+    <section id="sidebar">
         
     </section>
 	
