--- a/components/3/component.html
+++ b/components/3/component.html
@@ -10,7 +10,7 @@
 <body>
 
 	<!-- Component -->    
-    <section id="posts">
+    <section>
         <ul>
             <li><h3><a href="#">Everything</a></h3></li>
             <li><h3><a href="#">Interviews</a></h3></li>
@@ -63,9 +63,9 @@
         
     </section>
     
-    <section id="sidebar">
+    <aside>
         
-    </section>
+    </aside>
 	
 
 	<!-- End Component -->
