--- a/components/3/component.css
+++ b/components/3/component.css
@@ -8,6 +8,7 @@ body {
     background: #000;
     font: 400 1.6rem/1.4 'PT Sans', sans-serif;
     color: #ccc;
+    height: 100%;
 }
 
 a {
@@ -48,9 +49,9 @@ h3 a:hover {
 
 /* SECTIONS ======================================== */
 
-section#posts {
+section {
     width: calc(100%/ 3 * 2);
-    margin-left: 1rem;
+    margin-right: 1rem;
     background: #222;
 }
 
@@ -65,6 +66,8 @@ section > h1 {
 article {
     position: relative;
     background: #1b1b1b;
+    height: auto;
+    
 }
 
 article h2 {
@@ -103,3 +106,8 @@ div {
     top: 90%;
 }
 
+article::after, div::after {
+    content: " ";
+    display: table;
+    clear: both;
+}
