--- a/components/3/component.html
+++ b/components/3/component.html
@@ -4,8 +4,10 @@
 	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="font-awesome.min.css" />
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
 
@@ -33,33 +35,21 @@
                     <li><a href="#">Twitter</a></li>
                     <li><a href="#">Pinterest</a></li>
                     <li><a href="#">Google+</a></li>
-                    <li>8 Shares</li>
-                </ul>
+                    <li><p>8 Shares</p></li>
+                    <li><p>Posted by Glenn on June 19, 2015</p></li>
 
-                <p>Posted by Glenn on June 19, 2015</p>
+                <li><a href="#">Comment now</a></li>
+                </ul>
                 
-                <p><a href="#">Comment Now</a></p>
+                
+                
+                
             </div>
         </article>
         
-        <article>
-            <figure><img src="images/spin.png" alt="Spin"></figure>
-            <div>
-                <h2><a href="">Folch Studio</a></h2>
-                <p>Barcelona agency <a href="#">Folch</a> were last featured on FFF back in 2010. Now ten years since opening the agency has developed a beautiful, diverse portfolio built on their solid editorial credentials</p>
-                <ul>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Pinterest</a></li>
-                    <li><a href="#">Google+</a></li>
-                    <li>11 Shares</li>
-                </ul>
-
-                <p>Posted by Stephan on June 19, 2015</p>
-                
-                <p><a href="#">Comment Now</a></p>
-            </div>
-        </article>
+        
+        
+       
         
     </section>
     
