--- a/components/4/component.html
+++ b/components/4/component.html
@@ -4,6 +4,9 @@
 	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="font-awesome.min.css" />
 </head>
 <body>
 
@@ -11,12 +14,12 @@
     <section>
         <h2>Contact</h2>
         <p>Yoda soon you will call me master Fovernor Tarkin. A new hope Boba Fett bantha forest moon. Tusken raider Master Yoda do or do not never tell me the odds.</p>
-        <button><img src="" alt=""></button>
+        <button><p></p></button>
         
         <form>
-            <p><label for="name">Name<input type="text" name="name" /></label></p>
-            <p><label for="email">Email<input type="email" name="email" /></label></p>
-            <p><label for="subject">Subject<input type="text" name="subject" /></label></p>
+            <p><label for="name">Name</label><input type="text" name="name" /></p>
+            <p><label for="email">Email</label><input type="email" name="email" /></p>
+            <p><label for="subject">Subject</label><input type="text" name="subject" /></p>
             <p><textarea name="message"></textarea></p>
             <p><input type="submit" value="Envoyer"></p>
         </form>
