--- a/components/4/component.css
+++ b/components/4/component.css
@@ -2,7 +2,107 @@
 ================================================================================
 COMPONENT STYLESHEET
 ================================================================================ */
+html {font-size: 62.5%; }
+body {
+    background: #f0f0f0;
+    max-width: 960px;
+    font: 400 1.6rem/1.4 'Open Sans', sans-serif;
+    margin: 10rem auto;
+}
 
-/* HEADER ======================================== */
+h2 {
+    font: 400 1.6rem/1.4 'Oswald', sans-serif;
+    background: #f53f58;
+    color: #fff;
+    padding: 1.2rem;
+    font-size: 3rem;
+    text-transform: uppercase;
+    text-shadow: 0px 2px #4e3c48;
+}
+/* SECTION ======================================== */
 
-/* HEADER ======================================== */
+section {
+    background: #fff;
+    width: 50%;
+    margin: 0 auto;
+}
+
+section > p {
+    padding: 2rem;
+}
+
+button, input[type="submit"] {
+    width: 90%;
+    display: block;
+    margin: 0 auto 2rem;
+    border: none;
+    background: #f53f58;
+    box-shadow: 2px 2px #4e3c48;
+    border-top-left-radius:0;
+    border-top-right-radius:.5rem;
+    border-bottom-right-radius:0;
+    border-bottom-left-radius:.5rem;
+    padding: 1rem 0;
+    cursor: pointer;
+}
+
+button p::before {
+    content: "\f0e0";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 3.5rem;
+    color: #852332;
+    text-decoration: inherit;
+}
+
+form {
+    width: 90%;
+    margin: 0 auto;
+}
+
+form p {
+    width: 100%;   
+    margin: 1rem 0;
+}
+
+label {
+    font: 400 1.6rem 'Oswald', sans-serif;
+    background: #f53f58;
+    display: block;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    width: 15%;
+    float: left;
+    clear: both;
+}
+
+input { 
+    border: #eee solid 1px;
+    width: 85%;
+}
+
+input[type="submit"] {
+    color: #fff;
+    text-transform: uppercase;
+    font: 400 1.6rem/1.4 'Oswald', sans-serif;
+    display: block;
+    width: 40%;
+    clear: both;
+}
+
+textarea {
+    border: #eee solid 1px;
+    width: 100%;
+    height: 10rem;
+}
+
+form::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+
