--- a/components/7/component.html
+++ b/components/7/component.html
@@ -4,16 +4,18 @@
 	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="font-awesome.min.css" />
 </head>
 <body>
 
 	<!-- Component -->
     <header>
-        <img src="" alt="Dribble Logo">
+        <img src="images/logo-hd-94278cec901b40c13a9c28fbb6f9fa37.png" alt="Dribble Logo">
         <h1>Sign in</h1>
     </header>
     <section>
-        <article>
+        <article id="signIn">
             <form>
                 <p><label for="usernameEmail">Username or Email</label></p>
                 <p><input type="text" name="usernameEmail"></p>
@@ -24,7 +26,7 @@
             </form>
         </article>
         
-        <article>
+        <article id="twitterSignIn">
             <p><a href="#">Sign in with Twitter</a></p>
             <p>One-click sign in to Dribbble if your account is connected to Twitter. We'll walk you through connecting it if it isn't.</p>
         </article>
