--- a/components/7/component.css
+++ b/components/7/component.css
@@ -2,7 +2,99 @@
 ================================================================================
 COMPONENT STYLESHEET
 ================================================================================ */
+html {font-size: 62.5%;}
+body {
+    background: #333;
+    max-width: 960px;
+    margin: 3rem auto;
+    font: 400 1.6rem/1.4 'Open Sans', sans-serif;
+    color: #aba2a3;
+}
+h1 {
+    font-size: 2.5rem;   
+}
 
 /* HEADER ======================================== */
+header {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+header img {
+    width: 20%;
+}
 
-/* HEADER ======================================== */
+article {
+    width: 50%;
+}
+
+#signIn {
+    float: left;
+    text-align: right;  
+    border-right: #aba2a3 solid 1px;
+    padding: 0 2rem;
+}
+
+#twitterSignIn {
+    float: left;
+    padding-left: 2rem;
+    font-size: 1rem;
+}
+
+section + p {
+    clear: both;
+    text-align: center;
+    padding-top: 2rem;
+    font-size: 1.3rem;
+}
+
+form {
+    font-size: 1rem;
+    color: #c8c7c3;
+    text-align: left;
+    width: 50%;
+    float: right;
+}
+
+input {
+    border-radius: .5rem;
+    height: 3rem;
+    width: 100%;
+    margin: .3rem 0 1rem 0;
+}
+
+input[type="submit"] {
+    background: #ea4c88;
+    width: 6rem;
+    color: #fff;
+    font-size: 1.3rem;
+    border-radius: .3rem;
+}
+
+#signIn p > a, section + p a {
+    color: #aba2a3;
+    text-decoration: underline;
+    padding-left: .3rem;
+}
+
+#twitterSignIn  p {
+    width: 50%;
+    margin-top: 1.5rem;
+}
+
+#twitterSignIn  a {
+    color: #fff;
+    font-size: 1.5rem;
+    background-color: #2994be;
+    padding: .5rem 1rem .5rem 1.5rem; 
+    border-radius: .3rem;
+}
+
+#twitterSignIn  a:before {
+    color: #6cc7e6;
+    content: "\f099";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 2rem;
+    padding: .7rem .5rem 0 0;
+}
