--- a/components/9/component.html
+++ b/components/9/component.html
@@ -4,6 +4,8 @@
 	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="font-awesome.min.css" />
 </head>
 <body>
 
