--- a/components/3/component.html
+++ b/components/3/component.html
@@ -31,6 +31,30 @@
 
 <p>Make sure you add a copy to your bookshelf.</p>
                 <ul>
+                    <li><a href="http://www.facebook.com">Facebook</a></li>
+                    <li><a href="http://www.twitter.com">Twitter</a></li>
+                    <li><a href="http://www.pinterest.com">Pinterest</a></li>
+                    <li><a href="http://www.google.com/+">Google+</a></li>
+                    <li><p>8 Shares</p></li>
+                    <li><p>Posted by Glenn on June 19, 2015</p></li>
+
+                <li><a href="#">Comment now</a></li>
+                </ul>
+                
+                
+                
+                
+            </div>
+        </article>
+        
+                <article>
+            <figure><img src="images/alphabetImage.png" alt="Alphabet Logo Image"></figure>
+            <div>
+                <h2><a href="#">Alphabet Logo</a></h2>
+                <p>Our pals at Counterprint have done it again. Their latest book <a href="#">Alphabet Logo</a> is a compendium of logos designed, you guessed it, from letters of the alphabet. Containing over 500 logos from some of the world, this latest release showcases the work of leading design companies like; Bond Creative, Bruce Mau Design, Hype Type Studio, Pentagram, Stockholm Design Lab, Wolff Olins and even a couple of FFF contributors!</p>
+
+<p>Make sure you add a copy to your bookshelf.</p>
+                <ul>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Twitter</a></li>
                     <li><a href="#">Pinterest</a></li>
