--- a/components/3/component.css
+++ b/components/3/component.css
@@ -108,10 +108,10 @@ section > ul > li#current a {
 
 div {
     background: rgba(34, 34, 34, .9);
-    position: absolute;
+    position: relative;
     width: 90%;
-    right: 0;
-    top: 90%;
+    top: -5rem;
+    left: 6.5rem;
 }
 
 div > ul {
@@ -158,7 +158,11 @@ div > ul > li:last-child a {
     font-size:  1.5rem;
     text-indent: 0px;
     width: 15rem;
-    border-bottom: .5rem solid #067a71;s
+    border-bottom: .5rem solid #067a71;
+}
+
+div > ul > li:nth-child(6) {
+    padding-left: 6rem;
 }
 
 div > ul > li:last-child a::before {
@@ -175,4 +179,26 @@ div > ul::after {
     content: "";
     display: table;
     clear: both;
+}
+
+a[href*="twitter"] {
+    background: url(images/twitter.svg) no-repeat;
+    background-size: 2rem;
+    color: rgba(255,255,255, .6);
+}
+
+a[href*="facebook"] {
+    background: url(images/facebook.svg) no-repeat;
+    background-size: 2rem;
+}
+
+a[href*="pinterest"] {
+    background: url(images/pinterest.svg) no-repeat;
+    background-size: 2rem;
+}
+
+
+a[href*="google"] {
+    background: url(images/google.svg) no-repeat;
+    background-size: 2rem;
 }
