--- a/components/8/component.html
+++ b/components/8/component.html
@@ -27,34 +27,38 @@
         <nav>
             <h4>Navigation</h4>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#" class="home">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
          </nav>
-        <aside>
-            <h2>Newsletter</h2>
+
             <form>
+                <h2>Newsletter</h2>
+
                 <p><input type="email" name="email" placeholder="Enter your email" /></p>
                 <p><input type="submit" name="submit" value="Subscribe" /></p>
+                
+                <h4>Follow Us</h4>
+                <ul>
+                    <li><a href="http://www.facebook.com">Facebook</a></li>
+                    <li><a href="http://www.twitter.com">Twitter</a></li>
+                    <li><a href="http://www.google/+">Google+</a></li>
+                    <li><a href="http://www.youtube.com">YouTube</a></li>
+                </ul>
             </form>
             
-            <h4>Follow Us</h4>
-            <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Google+</a></li>
-                <li><a href="#">YouTube</a></li>
-            </ul>
-        </aside>
+
 	</footer>
-    
+
     <footer>
         <p>Copyright &copy; 2015 MMA Store. All Rights Reserved. Template Settings</p>
     </footer>
 
+
 	<!-- End Component -->
 	
 </body>
+
 </html>
