--- a/components/5/component.html
+++ b/components/5/component.html
@@ -10,16 +10,20 @@
 	<!-- Component -->
     <header>
         <nav>
-            <li><a href="#">Twiter</a></li>
-            <li><a href="#">Sound Cloud</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Flickr</a></li>
-            <li><a href="#">Tumblr</a></li>
-            <li><a href="#">YouTube</a></li>
-
-            <li><button>Timeline</button></li>
-            <li><button>Grid</button></li>
-            <li><button>List</button></li>
+            <ul>
+            <li><a href="#twitter">Twitter</a></li>
+            <li><a href="#soundcloud">Sound Cloud</a></li>
+            <li><a href="#facebook">Facebook</a></li>
+            <li><a href="#flickr">Flickr</a></li>
+            <li><a href="#tumblr">Tumblr</a></li>
+            <li><a href="#youtube">YouTube</a></li>
+                <ul>
+                    <li><a href="#timeline">Timeline</a></li>
+                    <li><a href="#grid">Grid</a></li>
+                    <li><a href="#list">List</a></li>
+                </ul>
+            
+            </ul>
         </nav>
     </header>
     <section>    
@@ -27,26 +31,26 @@
             <img src="" alt=""><!-- for the dot on the timeline-->
 
             <header>
-                <img src="" alt=""><!-- platform icon -->
+                <img src="images/twitter.png" alt="Twitter Social Icon"><!-- platform icon -->
                 <h2>@Pauladeleone</h2>
-                <img src="" alt=""><!-- attachment icon -->
+                <img src="images/link.png" alt="Attachment"><!-- attachment icon -->
             </header>
 
 
             <p>RT @MustifiedTweets: Stunning Fashion Websites for your Inspiration http:/t.com/VW64TAatU6 #design, #love, #webdesign, #inspiration,</p>
 
             <ul>
-                <li><button>Reply</button></li>
-                <li><button>Retweet</button></li>
-                <li><button>Favorite</button></li>
+                <li><a href="#reply">Reply</a></li>
+                <li><a href="#retweet">Retweet</a></li>
+                <li><a href="#favorite">Favorite</a></li>
             </ul>
             <footer>
                 <img src="" alt=""><!-- clock icon -->
                 <p>about a minute ago</p>
 
                 <ul>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twitter</a></li>
+                    <li><a href="http://www.facebook.com">Facebook</a></li>
+                    <li><a href="http://www.twitter.com">Twitter</a></li>
                 </ul>
             </footer>
         </article>
@@ -55,26 +59,26 @@
             <img src="" alt=""><!-- for the dot on the timeline-->
 
             <header>
-                <img src="" alt=""><!-- attachment icon -->
+                <img src="images/flickr.png" alt="Flickr Social Icon"><!-- attachment icon -->
                 <h2>@Projectpeachuk</h2>
-                <img src="" alt=""><!-- platform icon -->
+                <img src="images/link.png" alt="Attachment"><!-- platform icon -->
             </header>
 
 
             <p>We're NOT a #webdesign studio. We are changing the way #websites work by making them work! Want to talk? #DevOps #smallbizutd #IT</p>
 
             <ul>
-                <li><button>Reply</button></li>
-                <li><button>Retweet</button></li>
-                <li><button>Favorite</button></li>
+                <li><a href="#reply">Reply</a></li>
+                <li><a href="#retweet">Retweet</a></li>
+                <li><a href="#favorite">Favorite</a></li>
             </ul>
+            
             <footer>
-                <img src="" alt=""><!-- clock icon -->
                 <p>about a minute ago</p>
 
                 <ul>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twitter</a></li>
+                    <li><a href="http://www.facebook.com">Facebook</a></li>
+                    <li><a href="http://www.twitter.com">Twitter</a></li>
                 </ul>
              </footer>
            </article>
